--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "gulp": "^4.0.2",
     "husky": "^4.2.5",
     "is-ci": "^2.0.0",
+    "semver": "^7.3.2",
     "test-each": "^2.0.0",
     "yarn": "^1.22.1"
   },
