Revert "Remove core-js"
This reverts commit cb94ee121befa3b3124b3ae1b357cda8774491d1.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "test": "test"
   },
   "dependencies": {
+    "core-js": "^3.6.5",
     "del": "^5.1.0",
     "execa": "^4.0.0",
     "filter-obj": "^2.0.1",
