--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "is-plain-obj": "^2.1.0",
     "jest-validate": "^25.3.0",
     "path-exists": "^4.0.0",
-    "path-key": "^3.1.1"
+    "path-key": "^3.1.1",
+    "path-type": "^4.0.0"
   },
   "devDependencies": {
     "@ehmicky/dev-tasks": "^0.31.37",
