--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "@ehmicky/dev-tasks": "^1.0.7",
+    "nyc": "^15.1.0",
     "semver": "^7.3.5",
     "test-each": "^2.0.1",
     "yarn": "^1.22.1"
