--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "exports": "./build/src/main.js",
   "main": "./build/src/main.js",
+  "types": "./build/src/main.d.ts",
   "files": [
-    "build/src/**/*.{js,ts,map,json,sh,md}",
-    "examples/**/*.{js,ts,map,json,sh,md}"
+    "build/src/**/*.{js,d.ts,map,json,sh,md}",
+    "examples/**/*.{js,d.ts,map,json,sh,md}"
   ],
   "scripts": {
     "test": "gulp test"
@@ -27,11 +28,11 @@
     "dependency-management",
     "es6",
     "javascript",
+    "typescript",
     "library",
     "npmjs",
     "operating-system",
     "package-manager",
-    "server",
     "bash"
   ],
   "license": "Apache-2.0",
@@ -58,9 +59,11 @@
   },
   "devDependencies": {
     "@ehmicky/dev-tasks": "^1.0.77",
+    "@types/node": "^18.0.0",
     "nyc": "^15.1.0",
     "semver": "^7.3.7",
     "test-each": "^5.0.0",
+    "tsd": "^0.21.0",
     "yarn": "^1.22.18"
   },
   "engines": {
