--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "bash"
   ],
   "license": "Apache-2.0",
-  "homepage": "https://git.io/Jeg6F",
+  "homepage": "https://www.github.com/ehmicky/nvexeca",
   "repository": "ehmicky/nvexeca",
   "bugs": {
     "url": "https://github.com/ehmicky/nvexeca/issues"
