--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   },
   "author": "ehmicky <ehmicky@gmail.com> (https://github.com/ehmicky)",
   "directories": {
-    "lib": "src",
-    "test": "test"
+    "lib": "src"
   },
   "dependencies": {
     "execa": "^6.1.0",
