--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
   ],
   "license": "Apache-2.0",
   "homepage": "https://www.github.com/ehmicky/nvexeca",
-  "repository": "ehmicky/nvexeca",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ehmicky/nvexeca.git"
+  },
   "bugs": {
     "url": "https://github.com/ehmicky/nvexeca/issues"
   },
