--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "global-cache-dir": "^6.0.0",
     "is-plain-obj": "^4.1.0",
     "npm-run-path": "^5.3.0",
+    "p-map": "^7.0.2",
     "path-exists": "^5.0.0",
     "path-key": "^4.0.0",
     "path-type": "^5.0.0"
