--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "devDependencies": {
     "@ehmicky/dev-tasks": "^3.0.19",
     "@ehmicky/eslint-config": "^20.0.4",
+    "@ehmicky/prettier-config": "^1.0.0",
     "@types/node": "^22.8.1",
     "is-ci": "^3.0.1",
     "semver": "^7.6.3",
